--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "tsc-watch": "^5.0.3",
     "typescript": "^4.6.4"
   },
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "start": "tsc -watch",
+    "build": "tsc"
   }
 }
